tor-onions (0.2.3.1~trusty) trusty; urgency=medium

  * Inclusion of client-side Stem script in package (#7)
  * Updated manpage (#8)
  * Additional control for registering a domain (#9)

 -- Jesse Victors <kernelcorn@riseup.net>  Wed, 20 May 2015 23:31:00 -0700

tor-onions (0.2.2.3~trusty) trusty; urgency=medium

  * Compatibility with the unaltered Tor Browser.
  * Transfer of Records over Tor for stronger security.
  * Changed IPC from named pipes to sockets.
  * Changed communication ports to TCP 9053 and 10053.
  * Fixed bugs with building from source.
  * Support for i386, amd64, and armhf architectures.

 -- Jesse Victors <kernelcorn@riseup.net>  Wed, 20 May 2015 23:31:00 -0700

tor-onions (0.2.1.3~vivid) vivid; urgency=medium

  * Remote resolution of domain names over Tor.
  * Initial TCP server for resolving domains.
  * Essentials of the Record Generation protocol.
  * Basic verification of Records by clients.
  * Simpler usage syntax.
  * Improved stability.
  * Cleaner codebase.

 -- Jesse Victors <kernelcorn@riseup.net>  Fri, 29 Apr 2015 11:23:00 -0600

tor-onions (0.1.4.1~trusty) trusty; urgency=medium

  * Working Tor-OnioNS IPC.
  * Cleaner setup of named pipes.
  * Removed helper script.

 -- Jesse Victors <kernelcorn@riseup.net>  Fri, 10 Apr 2015 10:06:00 -0600

tor-onions (0.1.3.5~trusty) trusty; urgency=medium

  * Added named pipes for Tor-OnioNS IPC.
  * Main binary called from helper script.

 -- Jesse Victors <kernelcorn@riseup.net>  Sun, 05 Apr 2015 14:57:00 -0600

tor-onions (0.1.2.6~trusty) trusty; urgency=medium

  * Include amd64 tor-client binary in build.
  * Lowercased binary in accordance with conventions.
  * Builds for Ubuntu Trusty, Utopic, and Vivid.

 -- Jesse Victors <kernelcorn@riseup.net>  Sun, 05 Apr 2015 9:39:00 -0600

tor-onions (0.1.1.15) trusty; urgency=medium

  * Installation of libscrypt shared object.
  * Fixed lintian warnings and errors.