@@ -1,10 +1,14 @@
 tor-onions (0.2.3.1~trusty) trusty; urgency=medium
 
+  * Improved networking reliability.
+  * Asynchronous domain resolution. (#3)
   * Inclusion of client-side Stem script in package (#7)
   * Updated manpage (#8)
-  * Additional control for registering a domain (#9)
+  * Domain Registration protocol. (#9)
+  * Failure with explanation instead of crash if Tor isn't running. (#10)
+  * Ability to connect to "example.tor" (#11)
 
- -- Jesse Victors <kernelcorn@riseup.net>  Wed, 20 May 2015 23:31:00 -0700
+ -- Jesse Victors <kernelcorn@riseup.net>  Fri, 22 May 2015 19:39:00 -0700
 
 tor-onions (0.2.2.3~trusty) trusty; urgency=medium
 
